- Restored maximized windows on startup, will be restored to the maximum size available
- New widget type Triangle on View Sensors

Improved ZX Desktop:
- Allow to set small values for ZX Desktop width size
- Add setting to disallow enabling ZX Desktop
- Allow to change background color for icons, lower and upper buttons
- Added setting to add a stroke on icons

Improved editing joystick to events/keys (allow to unasign easily)
Improved ZX Life: allow to speed up game, fix behaviour on board limits
Improved Trash icon
Improved decimal precision of Basic Variables window values
Improve code to allow compilation on other Unix systems, like AROS, FiwixOS, Sortix
Improved ZENG Online protocol: allow to connect different client and server ZEsarUX versions (if they are compatible)

* Fixes:

Fixed emulation of Magnum Light Phaser
Fixed reading port BFFD on Spectrum +2A/+3
Fixed emulation of DD/FD+EB opcode: EX DE,HL instead of EX DE,IX/IY
Fixed timing of inexistent DD/FD opcodes
Fixed disassemble of undocumented opcodes dd/fd + cb + res/set (ix+d) where the result is also stored on a register
Fixed loading tape with --tape and --realtape and autoload snapshot on start
Fixed uncompress tar and rar files with spaces in name
Fixed default timer on Mac OS X when not using cocoa driver
Fixed non-pthreads compilation
Fixed possible divide by 0 when getting bad cpu usage on Linux
Removed some old/non-existent - Z80N Next opcodes

----



ZEsarUX 12.1 - Night Shift edition. 25 September 2025

* New things added:

Added Streaming mode to ZENG Online for ZX Spectrum. It improves gaming experience: reduces lag and drops all game state inconsistencies between all players
Added support for steering wheel joystick (and other analog joystick controls) to racing games (using pre-defined modification for specific games or custom)
Added real joystick support for SDL2
Added support for up to 4 joystick fire buttons on:
- Kempston joystick (Spectrum): 4 buttons
- Amstrad CPC: 3 buttons